--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Description: An R package implementing sparse Bayesian learning method for QTL m
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Depends: stats, R (>= 2.10)
 RoxygenNote: 6.1.0
 Date: 2018-10-06
 Suggests: knitr,
