--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: sbl
 Type: Package
-Title: Sparse Bayesian learning for QTL mapping and GWAS
+Title: Sparse Bayesian Learning for QTL Mapping and Genome-Wide Association Studies
 Version: 0.1.0
 Author: Meiyue Wang and Shizhong Xu
 Maintainer: Meiyue Wang <mwang024@ucr.edu>
-Description: An R package implementing sparse Bayesian learning method for QTL mapping and genome-wide association studies.
+Description: Implements sparse Bayesian learning method for QTL mapping and genome-wide association studies.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: stats, R (>= 2.10)
 RoxygenNote: 6.1.0
-Date: 2018-10-06
+Date: 2018-10-17
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
